[package]
name = "base-provider-bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "provider_basic_base"
harness = false

[dev-dependencies]
alloy-primitives = "1.5.0"
criterion = "0.5.1"
# Enables the OP DB codecs needed by `OpNode` provider access.
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "8e3b5e6a99439561b73c5dd31bd3eced2e994d60", features = ["op"] }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "8e3b5e6a99439561b73c5dd31bd3eced2e994d60" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", rev = "8e3b5e6a99439561b73c5dd31bd3eced2e994d60" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "8e3b5e6a99439561b73c5dd31bd3eced2e994d60" }
