[package]
name = "base-provider-bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "provider_basic_base"
harness = false

[dev-dependencies]
alloy-primitives = "1.5.7"
criterion = "0.8.2"
# Enables the OP DB codecs needed by `OpNode` provider access.
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", features = ["op"] }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
